<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="me.pagar.demoandroidpagarmempos.ChooseAmountActivity"
    tools:showIn="@layout/app_bar_choose_amount">

  <android.support.constraint.ConstraintLayout
      android:id="@+id/constraintLayout"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:elevation="10dp"
      android:orientation="vertical"
      android:paddingBottom="25dp"
      android:paddingTop="25dp"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0"
      style="@style/AppTheme.GreenDivision"
      >

    <TextView
        android:id="@+id/info_choose_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="2dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="2dp"
        android:text="@string/info_choose_amount"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/AppTheme.AmountText"
        />
  </android.support.constraint.ConstraintLayout>

  <android.support.constraint.ConstraintLayout
      android:id="@+id/constraintLayout2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="1.0"
      >
    <Button
        android:id="@+id/text_number_one"
        android:layout_width="wrap_content"
        android:text="@string/number_one"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="addNumber"
        style="@style/AppTheme.NumberButton"
        />
    <Button
        android:id="@+id/text_number_two"
        android:layout_width="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/number_two"
        app:layout_constraintEnd_toStartOf="@+id/text_number_three"
        app:layout_constraintStart_toEndOf="@+id/text_number_one"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="addNumber"
        style="@style/AppTheme.NumberButton"
        />
    <Button
        android:id="@+id/text_number_three"
        android:layout_width="wrap_content"
        android:text="@string/number_three"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:onClick="addNumber"
        style="@style/AppTheme.NumberButton"
        />
    <Button
        android:id="@+id/text_number_four"
        android:layout_width="wrap_content"
        android:text="@string/number_four"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_number_one"
        android:onClick="addNumber"
        style="@style/AppTheme.NumberButton"
        />
    <Button
        android:id="@+id/text_number_five"
        android:layout_width="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/number_five"
        app:layout_constraintBottom_toTopOf="@+id/text_number_eight"
        app:layout_constraintEnd_toStartOf="@+id/text_number_six"
        app:layout_constraintStart_toEndOf="@+id/text_number_four"
        app:layout_constraintTop_toBottomOf="@+id/text_number_two"
        app:layout_constraintVertical_bias="0.32999998"
        android:onClick="addNumber"
        style="@style/AppTheme.NumberButton"
        />
    <Button
        android:id="@+id/text_number_six"
        android:layout_width="wrap_content"
        android:text="@string/number_six"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_number_three"
        android:onClick="addNumber"
        style="@style/AppTheme.NumberButton"
        />
    <Button
        android:id="@+id/text_number_seven"
        android:layout_width="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/number_seven"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_number_four"
        app:layout_constraintVertical_bias="0.169"
        android:onClick="addNumber"
        style="@style/AppTheme.NumberButton"
        />
    <Button
        android:id="@+id/text_number_eight"
        android:layout_width="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/number_eight"
        app:layout_constraintBottom_toTopOf="@+id/text_number_double_zero"
        app:layout_constraintEnd_toStartOf="@+id/text_number_nine"
        app:layout_constraintStart_toEndOf="@+id/text_number_seven"
        android:onClick="addNumber"
        style="@style/AppTheme.NumberButton"
        />
    <Button
        android:id="@+id/text_number_nine"
        android:layout_width="wrap_content"
        android:layout_marginBottom="64dp"
        android:text="@string/number_nine"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_number_six"
        app:layout_constraintVertical_bias="0.41"
        android:onClick="addNumber"
        style="@style/AppTheme.NumberButton"
        />
    <Button
        android:id="@+id/text_number_zero"
        android:layout_width="0dp"
        android:layout_marginBottom="8dp"
        android:text="@string/number_zero"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0"
        android:onClick="addNumber"
        style="@style/AppTheme.NumberButton"
        />
    <Button
        android:id="@+id/text_number_double_zero"
        android:layout_width="wrap_content"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/ic_keyboard_backspace_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_clean_number"
        app:layout_constraintStart_toEndOf="@+id/text_number_zero"
        android:onClick="subtractNumber"
        style="@style/AppTheme.NumberButton"
        />
    <Button
        android:id="@+id/text_clean_number"
        android:layout_width="0dp"
        android:layout_marginBottom="8dp"
        android:drawableTop="@drawable/ic_credit_card_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/text_number_two"
        app:layout_constraintVertical_bias="1.0"
        android:onClick="goToPaymentActivity"
        style="@style/AppTheme.NumberButton"
        />
  </android.support.constraint.ConstraintLayout>
  <TextView
      android:id="@+id/amount_display"
      android:layout_width="0dp"
      android:layout_height="0dp"
      android:layout_marginBottom="8dp"
      android:layout_marginEnd="8dp"
      android:layout_marginStart="8dp"
      android:layout_marginTop="8dp"
      android:text="@string/info_balance_amount"
      android:textAlignment="center"
      app:layout_constraintBottom_toTopOf="@+id/constraintLayout2"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
      app:layout_constraintVertical_bias="0.271"
      style="@style/AppTheme.DisplayAmountText"
      />
</android.support.constraint.ConstraintLayout>
