<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/cardview_light_background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:visibility="visible"
    tools:context="me.pagar.demoandroidpagarmempos.TransactionActivity"
    >

  <TextView
      android:id="@+id/textViewValue"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="20dp"
      android:text="@string/transaction_value"
      android:textSize="24sp"
      style="@style/AppTheme.TransactionScreenText"
      />

  <TextView
      android:id="@+id/textFinalValue"
      android:layout_width="match_parent"
      android:layout_height="30dp"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_alignTop="@+id/textViewValue"
      android:layout_marginLeft="5sp"
      android:layout_toEndOf="@+id/textViewValue"
      android:layout_toRightOf="@+id/textViewValue"
      android:textSize="24sp"
      style="@style/AppTheme.TransactionScreenText"
      />

  <RadioGroup
      android:id="@+id/radioGroupDebitCredit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textFinalValue"
      android:layout_marginTop="20dp"
      >

    <RadioButton
        android:id="@+id/radioDebit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:checked="true"
        android:text="@string/transaction_debit"
        android:textSize="20sp"
        style="@style/AppTheme.TransactionScreenText"
        />

    <RadioButton
        android:id="@+id/radioCredit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/transaction_credit"
        android:textSize="20sp"
        style="@style/AppTheme.TransactionScreenText"
        />
  </RadioGroup>

  <TextView
      android:id="@+id/textViewInstallments"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/radioGroupDebitCredit"
      android:layout_marginTop="20dp"
      android:text="@string/transaction_no_installments"
      style="@style/AppTheme.TransactionInstallmentsDisplay"
      />

  <Spinner
      android:id="@+id/spinnerInstallments"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textViewInstallments"
      android:layout_centerVertical="true"
      android:layout_marginTop="5dp"
      style="@style/AppTheme.TransactionInstallmentsText"
      />

  <Button
      android:id="@+id/buttonSendTransaction"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:layout_alignParentBottom="true"
      android:layout_marginBottom="20dp"
      android:text="@string/transaction_send_button"
      style="@style/AppTheme.ButtonPrimary"
      />

  <ProgressBar
      android:id="@+id/progress_bar"
      android:layout_width="100dp"
      android:layout_height="100dp"
      android:layout_centerHorizontal="true"
      android:layout_centerVertical="true"
      android:gravity="center"
      />

</RelativeLayout>